<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oh The Humanity!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="logo_descrip">Start game button</string> 
    <string name="create_descrip">Create game button</string>
    <string name="join_descrip">Join game button</string>
    <string name="friends_descrip">Friends game button</string>
    <string name="stats_descrip">Stats button</string>
    <string name="howplay_descrip">How to play button</string>
    <string name="howtoplay">How to Play</string>
    <string name="returntomenu">Go Back</string>
    
    <string name="rules">There are three terms that players should be familiar with. They are Black Cards, White Cards, and Card Czar. The objective of the game is to use the terms on the White Cards to fill in the blanks on the Black Cards, in order to win points from the Card Czar, who will decide the best/funniest card combination. When the game begins, the game host will be assigned to the role of Card Czar. All other players will draw seven White Cards. The Card Czar will draw a card from the deck of Black Cards, and reveal it to the other players. The other players will select one of their White Cards that they feel will best complete the Black Card and submit it for judging. At the end of every round, a new Card Czar will be assigned. In the end, who ever ends up with the most points will win. Made by David Douberley, Jimmy Eckstein, Michael Poplavski, Justin Khan, David Nguyen, and Mercy Peou</string>
     
    <string name="setting_save">Save</string>
    <string name="setting_notific">Notifications</string>
    <string name="setting_title">Settings</string>
    <string name="setting_switch">Log Out</string>
    <string name="htp_gotit">Got it!</string>
    <string name="fl_title">Friends</string>
    <string name="cg_title">Create Game</string>
    <string name="jg_title">Join Game</string>
    <string name="ca_title">Create Account</string>
    <string name="ca_create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="friend_view">View Friends</string>
    <string name="friend_invite">Add Friend</string>
    <string name="friend_delete">Delete Friend</string>
    
    <string name="stat_title">Player Stats</string>
    <string name="player_name">Player Name</string>
    <string name="games_won">Games Won</string>
    <string name="games_lost">Games Lost</string>
    <string name="average_points">Average Points per Game</string>
    <string name="most_points">Most Points in a Round</string>
    
    
    <string name="temp_construct">Page is under construction!!</string>
    <string name="black_card">Black Card</string>
    <string name="Card1">Card 1</string>
    <string name="Card2">Card 2</string>
    <string name="Card3">Card 3</string>
    <string name="Card4">Card 4</string>
    <string name="Card5">Card 5</string>
    <string name="Card6">Card 6</string>
    <string name="Card7">Card 7</string>
    <string name="see_card">Choose a card to see its text.</string>
    
    <string name="numPlayers">Number of Players (3 to 6)</string>
    <string name="numPlayers2">Number of Players</string>
    <string name="numRounds">Enter the desired number of rounds</string>
    <string name="gameName">Instance Name</string>
    <string name="Create">Create Game</string>
    
    <string name="error"></string>
    <string name="error2">THIS IS TEXT</string>
    
    <!-- InGame Strings -->
    
    <string name="action_settings">Settings</string>
	<string name="hint"> </string>
	<string name="round">Round:</string>
	<string name="submit">Submit</string>
	<string name="settings">Settings</string>
	
	<string name="card1">Card 1</string>
	<string name="card2">Card 2</string>
	<string name="card3">Card 3</string>
	<string name="card4">Card 4</string>
	<string name="card5">Card 5</string>
	<string name="card6">Card 6</string>
	<string name="card7">Card 7</string>
	
    <string name="test">Line1 
        \nLine2 
        \nLine3 
        \nLine4
        \nLine5
        \nLine6
        \nLine7
        \nLine8
        \nLine9
        \nLine10
        \nLine11
        \nLine12
        \nLine13
        \nLine14
        \nLine15</string>
        
	  <string name="cardtext">Getting married
        					 having a few kids, buying some stuffm
        					 retiring to Florida, and dying</string>
        					
    <string name = "blackText">Life for American Indians was 
        						forever changed when the white man
        						introduced then to____________. </string>
     						
        					
    
    <string name="defaultCard">default card</string>
    <string name="playerList">Player List</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="inviteFriendtitle">Friends</string>
    <string name="returnToGame">Return To Game</string>
    
    <string name="lobbyWelcome">Welcome to the Lobby!</string>
    <string name="lobbyDirections">Please invite people to the game</string>
    <string name="lobbyInvite">Invite Friends</string>
    <string name="defaultRounds">Default Rounds: </string>
    
     <string-array name="roundArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
     <string name="use_dr">Use Default Rounds</string>
     
     <string name="currentPlayer">Current Player</string>
</resources>