<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >

    <TextView
        android:id="@+id/inviteFriendtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/inviteFriendtitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TableLayout
        android:id="@+id/friendsTable"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_below="@+id/inviteFriendtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:stretchColumns="0,1" >
        
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error" />
        
    </TableLayout>

    <Button
        android:id="@+id/returnToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friendsTable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/returnToGame"
        android:textColor="@color/White" />

</RelativeLayout>