<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" xmlns:app="weight:http://schemas.android.com/apk/res/android">

    
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/playerRound"
        android:text="@string/submit"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/playerRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/chatBox"
        android:background="@color/Gray"
        android:text="@string/round"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="12dp" />
    
    <TextView
        android:id="@+id/chatBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/submit"
        android:background="@color/LightGrey"
        android:lines="6"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:text="@string/test"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chatBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="2"
         >

        <!-- BLACK CARD AND PLAYER LIST LAYOUT -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2" >

            <!-- BLACK CARD -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/blackcard"
                    android:layout_width="150dp"
                    android:layout_height="235dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/rectangle"
                    android:hint="@string/defaultCard"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="5dp"
                    android:scrollbars="vertical"
                    android:text="@string/blackText"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <!-- PLAYER LIST AND LABEL -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/listLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/playerList"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/playerList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/listLabel"
                    android:layout_margin="5dp"
                    android:background="@color/LightGrey"
                    android:textColor = "@color/Black"
                    android:lines="7"
                    android:maxLines="7" />
            </RelativeLayout>
        </LinearLayout>

        <!-- CARD LAYOUT -->

        <RelativeLayout
            android:baselineAligned="false"
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

         <TextView
             android:id="@+id/c1"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/white"
             android:hint="@string/defaultCard"
             android:paddingLeft="8dp"
             android:paddingTop="5dp"
             android:scrollbars="vertical"
             android:text="@string/card1" 
             android:layout_marginTop="10dp"/>

         <TextView
             android:id="@+id/c2"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="25dp"
             android:background="@drawable/white"
             android:hint="@string/defaultCard"
             android:paddingLeft="8dp"
             android:paddingTop="5dp"
             android:scrollbars="vertical"
             android:text="@string/card2"
             android:layout_marginTop="10dp" />

         <TextView
             android:id="@+id/c3"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="50dp"
             android:background="@drawable/white"
             android:hint="@string/defaultCard"
             android:paddingLeft="8dp"
             android:paddingTop="5dp"
             android:scrollbars="vertical"
             android:text="@string/card3"
             android:layout_marginTop="10dp" />

         <TextView
             android:id="@+id/c4"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="75dp"
             android:background="@drawable/white"
             android:hint="@string/defaultCard"
             android:paddingLeft="8dp"
             android:paddingTop="5dp"
             android:scrollbars="vertical"
             android:text="@string/card4"
             android:layout_marginTop="10dp" />

         <TextView
             android:id="@+id/c5"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="100dp"
             android:background="@drawable/white"
             android:hint="@string/defaultCard"
             android:paddingLeft="8dp"
             android:paddingTop="5dp"
             android:scrollbars="vertical"
             android:layout_marginTop="10dp"
             android:text="@string/card5" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/chatBox"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>