<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" 
	android:focusable="true"
	android:focusableInTouchMode="true"
    >
    
    <Button
        android:id="@+id/ReturnToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/returntomenu"
        android:textColor="@color/White" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ReturnToMenu"
        android:layout_below="@+id/btnAddFriend"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp" >

        <TableLayout
            android:id="@+id/friendsTable"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:layout_marginBottom="17dp"
            android:stretchColumns="0,1" >

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error" />
        </TableLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ScrollView01"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/FriendsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/fl_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/FriendsList"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btnAddFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddFriendBox"
        android:layout_centerHorizontal="true"
        android:text="@string/friend_invite"
        android:textColor="@color/White" />
    
    

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/AddFriendBox"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/AddFriendBox"
        android:layout_width="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:background="@color/White"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>